--- a/react/package.json
+++ b/react/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.1.8",
     "@tabler/icons-react": "^3.21.0",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
