--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^3.21.0",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
